--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../frame93.html %}
 
 {% block meta %}
 	<title>{{title}}_深呼吸</title>
@@ -47,7 +47,7 @@
 {% end %}
 {% block bodyleft %}
 <div id="event-item" class="box" style="padding:0px;background:#F2F0F0;">
-	<h2 style="text-align:center;">{{ title }}</h2>
+	<h2 class="title_center">{{ title }}</h2>
 	<ul class="thumbnails" style="padding-top:20px;">
 		<li class="span4">
 			<a href="#" class="thumbnail" title="{{title}}" alt="{{title}}">
