--- a/htmls/note/abstract.html
+++ b/htmls/note/abstract.html
@@ -31,7 +31,7 @@
 				<div class="btn-group">
 					<button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">模式切换 <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href="/note/abstract/" title="活动列表图片模式" alt="活动列表图片模式"><i class="icon-picture"></i> &nbsp;&nbsp;&nbsp;摘要模式</a></li>
+						<li><a href="/note/list/" title="游记列表表格模式" alt="游记列表表格模式"><i class="icon-th-list"></i> &nbsp;&nbsp;&nbsp;表格模式</a></li>
 					</ul>
 				</div>
 			</li>
