--- a/htmls/profile/setting.html
+++ b/htmls/profile/setting.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../frame93.html %}
 
 {% block static %}
 	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
