--- a/htmls/album/item.html
+++ b/htmls/album/item.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../frame93.html %}
 
 {% block meta %}
 	<title>{{title}}_相册_深呼吸</title>
@@ -87,5 +87,6 @@
 {% end %}
 {% block bodyright %}
 	<a class="btn" href="/album/" title="相册列表" alt="相册列表" >相册列表</a></br></br>
-	<div id="poster">图片上传</div>
+	<div id="poster">图片上传</div><br/>
+	<span style="color:orange;">友情提示：按住 shift 键 或 ctrl&lt;command&gt; 键，可以多图上传哦</span>
 {% end %}
