--- a/htmls/event/publish_step_two.html
+++ b/htmls/event/publish_step_two.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../frame93.html %}
 {% block meta %}
 	<meta name="robots" content="noarchive">
 	<meta name="robots" content="nofollow">
