--- a/htmls/base.html
+++ b/htmls/base.html
@@ -125,7 +125,7 @@
 							</div>
 						</div>
 						<div class="control-group">
-							<label class="control-label" for="nick">绰号</label>
+							<label class="control-label" for="nick">用户名</label>
 							<div class="controls">
 								<input name="nick" type="text">
 								<span class="help-inline hide">必填</span>
@@ -169,7 +169,7 @@
 							</div>
 						</div>
 						<div class="control-group">
-							<label class="control-label" for="nick">绰号</label>
+							<label class="control-label" for="nick">用户名</label>
 							<div class="controls">
 								<input name="nick" type="text">
 								<span class="help-inline hide">必填</span>
