--- a/htmls/base.html
+++ b/htmls/base.html
@@ -99,6 +99,10 @@
 		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-carousel.js') }}"></script>
 		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-typeahead.js') }}"></script>
 		<script type="text/javascript">
+			var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+			document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F6b34ad8e29d35b0144d58d00906f3ef9' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-31387623-1']);
 		_gaq.push(['_trackPageview']);
