--- a/htmls/index.html
+++ b/htmls/index.html
@@ -21,14 +21,14 @@
 		<div class="content_wrap_left" id="slideshow">
 			<div class="slideshow">
 				<div class="active">
-					<a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
-						<img src="http://www.huwaibj.com/image/attach/719455890fb540cf97f0f6ff21157b0f" width="640" height="280" onerror="this.src={{ static_url('img/blank.png') }}" />
+					<a target="_blank" href="http://www.shenhuxi.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
+						<img src="http://www.shenhuxi.com/image/attach/719455890fb540cf97f0f6ff21157b0f" width="640" height="280" onerror="this.src={{ static_url('img/blank.png') }}" />
 					</a>
 				</div>
 
 				<div>
-					<a target="_blank" href="http://www.huwaibj.com/note/15d7d63c970847588726c15a15eec9cf/">
-						<img src="http://www.huwaibj.com/image/attach/c57f9a85d4394aa08f04efe84dccaec4" width="640" height="280" onerror="this.src={{ static_url('img/blank.png') }};" />
+					<a target="_blank" href="http://www.shenhuxi.com/note/15d7d63c970847588726c15a15eec9cf/">
+						<img src="http://www.shenhuxi.com/image/attach/c57f9a85d4394aa08f04efe84dccaec4" width="640" height="280" onerror="this.src={{ static_url('img/blank.png') }};" />
 					</a>
 				</div>
 
@@ -66,48 +66,48 @@
 			<a href="/pin/index/cat/1" class="more">更多精彩>></a> </div>
 			<div class="item_content of_h">
 				<div class="pic_home_170_350">
-					<a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
-						<img src="http://www.huwaibj.com/image/attach/ed3d05da6d5a4917a77fbbb09026018b" />
+					<a target="_blank" href="http://www.shenhuxi.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
+						<img src="http://www.shenhuxi.com/image/attach/ed3d05da6d5a4917a77fbbb09026018b" />
 					</a>
-					<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">我的25天尼泊尔之旅,慵懒的晒太阳、徒步ABC、挥霍时间</a></div>
+					<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/3eb0e3e199fa48c7bd9d62704debd965/">我的25天尼泊尔之旅,慵懒的晒太阳、徒步ABC、挥霍时间</a></div>
 				</div>
 				<div class="pic_home_170_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
-					<img src="http://www.huwaibj.com/image/attach/83bc591cc3724a0da26bcb9e511ce10f" onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.shenhuxi.com/image/attach/83bc591cc3724a0da26bcb9e511ce10f" onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
 				<div class="pic-des">
-					<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第一高峰：珠穆朗玛峰 Mount Qomolangma （8844.43m）</a>
+					<a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第一高峰：珠穆朗玛峰 Mount Qomolangma （8844.43m）</a>
 				</div>
 			</div>
 			<div class="pic_home_170_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
-					<img src="http://www.huwaibj.com/image/attach/47a0df3ac58343669cf3df1151823076"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.shenhuxi.com/image/attach/47a0df3ac58343669cf3df1151823076"  onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
-				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第二高峰：乔戈里峰 Mount Qogir（8611m）</a></div>
+				<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第二高峰：乔戈里峰 Mount Qogir（8611m）</a></div>
 			</div>
 			<div class="pic_home_350_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
-					<img src="http://www.huwaibj.com/image/attach/5228d47b157840148a7193e894711202"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.shenhuxi.com/image/attach/5228d47b157840148a7193e894711202"  onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
-				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第四高峰：洛子峰 Mount Lhotse（8516m）</a></div>
+				<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第四高峰：洛子峰 Mount Lhotse（8516m）</a></div>
 			</div>
 			<div class="pic_home_350_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
-					<img src="http://www.huwaibj.com/image/attach/c6d91357728d4d568e07a5cdc8b4056c"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
+					<img src="http://www.shenhuxi.com/image/attach/c6d91357728d4d568e07a5cdc8b4056c"  onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
-				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">尼泊尔时间比我们晚两小时十五分</a></div>
+				<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/3eb0e3e199fa48c7bd9d62704debd965/">尼泊尔时间比我们晚两小时十五分</a></div>
 			</div>
 			<div class="pic_home_170_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">
-					<img src="http://www.huwaibj.com/image/attach/84fd9e7968ac480cad5b6a76157849f4"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">
+					<img src="http://www.shenhuxi.com/image/attach/84fd9e7968ac480cad5b6a76157849f4"  onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
-				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">出去游玩，捡个老婆抱回家</a></div>
+				<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">出去游玩，捡个老婆抱回家</a></div>
 			</div>
 			<div class="pic_home_170_170">
-				<a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
-					<img src="http://www.huwaibj.com/image/attach/ae76d9a808a84938a1941740b6a624ad"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				<a target="_blank" href="http://www.shenhuxi.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
+					<img src="http://www.shenhuxi.com/image/attach/ae76d9a808a84938a1941740b6a624ad"  onerror="this.src={{ static_url('img/blank.png') }};" />
 				</a>
-				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">重庆-版纳-老挝-泰国-柬埔寨-越南-河口-重庆</a></div>
+				<div class="pic-des"><a target="_blank" href="http://www.shenhuxi.com/note/02f2aef2cd9142d0aefee903231b3c4d/">重庆-版纳-老挝-泰国-柬埔寨-越南-河口-重庆</a></div>
 			</div>
 		</div>
 	</div>
