--- a/htmls/check/tag.html
+++ b/htmls/check/tag.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/tagit.ui-zendesk.css') }}"/>
 	<script language="javascript" src="{{ static_url('js/jquery-ui.min.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.tags.js') }}" type="text/javascript"></script>
-	<script language="javascript" src="{{ static_url('js/tags.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/deep.tag.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.pagination.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
