--- a/htmls/check/index.html
+++ b/htmls/check/index.html
@@ -1,8 +1,12 @@
-{% extends ../box102.html %}
+{% extends ../frame93.html %}
 
-{% block static %}
+{% block meta %}
+	<title>管理首页_深呼吸</title>
 	<meta name="robots" content="noarchive">
 	<meta name="robots" content="nofollow">
+{% end %}
+
+{% block static %}
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {})
 	</script>
