--- a/htmls/album/item.html
+++ b/htmls/album/item.html
@@ -76,7 +76,7 @@
 	{% for p in photos %}
 		<li class="span3 item">
 			<div class="thumbnail">
-				<a style="background:#EDEDED;" title="{{title}}" alt="{{title}}" target="_blank" href="/image/display/{{p}}"><img src="/image/attach/{{p}}_300" alt="{{title}}" /></a>
+				<a style="background:#EDEDED;" title="{{title}}" alt="{{title}}" target="_blank" href="/picture/{{p}}"><img src="/image/attach/{{p}}_300" alt="{{title}}" /></a>
 			</div>
 		</li>
 	{% end %}
@@ -90,3 +90,4 @@
 	<div id="poster">图片上传</div><br/>
 	<span style="color:orange;">友情提示：按住 shift 键 或 ctrl&lt;command&gt; 键，可以多图上传哦</span>
 {% end %}
+
