--- a/htmls/check/tag.html
+++ b/htmls/check/tag.html
@@ -1,8 +1,12 @@
-{% extends ../box102.html %}
+{% extends ../frame93.html %}
 
-{% block static %}
+{% block meta %}
+	<title>标签管理_深呼吸</title>
 	<meta name="robots" content="noarchive">
 	<meta name="robots" content="nofollow">
+{% end %}
+
+{% block static %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery-ui.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.tags.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/tagit.ui-zendesk.css') }}"/>
