--- a/htmls/frame12.html
+++ b/htmls/frame12.html
@@ -9,6 +9,7 @@
 		<footer class="footer">
 			{% block foot %}{% end %}
 			<p class="pull-right"><a href="">回到顶部</a></p>
+			<p class="pull-left"><a href="http://www.yimiqisan.com" target="_blank">&nbsp;&nbsp;七三工作室</a></p>
 			<p class="pull-left"><a href="/contact/">&nbsp;&nbsp;联系我们</a></p>
 			<p class="pull-left"><a href="/sitemap/">&nbsp;&nbsp;网站地图</a></p>
 		</footer>
