--- a/htmls/base.html
+++ b/htmls/base.html
@@ -42,7 +42,7 @@
 							<li id="nav-tag" class=""><a href="/tag/">标签</a></li>
 							<li id="nav-album" class=""><a href="/album/">相册</a></li>
 							<li id="nav-search" class=""><a href="/search/">搜索</a></li>
-							<li id="nav-wiki" class=""><a href="/wiki/">路线库</a></li>
+							<li id="nav-wiki" class="" style="display:none;"><a href="/wiki/">路线库</a></li>
 							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
