--- a/htmls/frame93.html
+++ b/htmls/frame93.html
@@ -16,6 +16,7 @@
 			<p class="pull-left"><a href="http://www.yimiqisan.com" target="_blank">&nbsp;&nbsp;七三工作室</a></p>
 			<p class="pull-left"><a href="/contact/">&nbsp;&nbsp;联系我们</a></p>
 			<p class="pull-left"><a href="/sitemap/">&nbsp;&nbsp;网站地图</a></p>
+			<br/><p class="pull-left" style="color:#bbb;">Copyright &copy; shenhuxi.com <a style="color:#aaa;" href="http://www.miibeian.gov.cn" target="_blank" class="g-gray" rel="nofollow">京ICP备12015937号-2</a></p>
 		</footer>
 	</div>
 {% end %}
