--- a/htmls/index.html
+++ b/htmls/index.html
@@ -4,6 +4,7 @@
 	<title>深呼吸</title>
 	<meta name="keywords" content="户外活动 登山 骑行 拉练 驴友 旅游">
 	<meta name="description" content="驴友 户外 垂直 社区">
+	<meta property="wb:webmaster" content="fdfa3b1ce33b63fe" />
 {% end %}
 
 {% block static %}
