--- a/htmls/base.html
+++ b/htmls/base.html
@@ -20,7 +20,7 @@
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ static_url('css/deep.css') }}"/>
-		<link rel="shortcut icon" href="{{ static_url('img/favicon') }}" type="image/x-icon">
+		<link rel="shortcut icon" href="{{ static_url('img/favicon.png') }}" type="image/x-icon">
 		{% block static %}{% end %}
 	</head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50">
