--- a/htmls/base.html
+++ b/htmls/base.html
@@ -14,7 +14,6 @@
 				login();reg();
 			})
 		</script>
-
 		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
@@ -43,6 +42,7 @@
 							<li id="nav-album" class=""><a href="/album/">相册</a></li>
 							<li id="nav-search" class=""><a href="/search/">搜索</a></li>
 							<li id="nav-wiki" style="display:none;" class=""><a href="/wiki/">路线库</a></li>
+							<li id="nav-vote" style="display:none;" class=""><a href="/vote/">投票</a></li>
 							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
