--- a/htmls/index_vote.html
+++ b/htmls/index_vote.html
@@ -16,8 +16,7 @@
                 <img src="http://www.askform.cn/Images/logo.gif" style="border-width: 0px;" /></a>
             </div>
             <div id="formHeader">
-                <h1 id="title">
-                    深呼吸户外网 用户体验调查</h1>
+                <h1 id="title"> 深呼吸户外网 用户体验调查</h1><a href="/">返回首页</a>
             </div>
             <div id="formBody">
                 <div id="formPager" class="pager" style="float: right;">
