--- a/htmls/base.html
+++ b/htmls/base.html
@@ -42,7 +42,7 @@
 							<li id="nav-album" class=""><a href="/album/">相册</a></li>
 							<li id="nav-search" class=""><a href="/search/">搜索</a></li>
 							<li id="nav-wiki" style="display:none;" class=""><a href="/wiki/">路线库</a></li>
-							<li id="nav-vote" style="display:none;" class=""><a href="/vote/">投票</a></li>
+							<li id="nav-vote" style="" class=""><a href="/vote0710/"><span class="badge badge-warning">用户体验投票</span></a></li>
 							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
